[ios] Ignore cache for welcome view page loads.

Bug: 815285
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I87ca4984122383038ecebf2a510d32bc16be54f0
Reviewed-on: https://chromium-review.googlesource.com/939746
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539540}
Former-commit-id: f50def54830171c28c63c7332cc6cfe5086d6759